--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ dependencies = [
     "lighteval[litellm,extended_tasks,multilingual,math]",
     "emoji",
     "python-dotenv",
+    "litellm[caching]",
 ]
 
 [project.optional-dependencies]
