--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,8 @@ dependencies = [
     "python-dotenv",
     "litellm[caching]",
     "matplotlib",
+    "tiktoken",
+    "blobfile",
 ]
 
 [project.optional-dependencies]
